New feature - Raw Flight Data Report Generation

--- a/style.css
+++ b/style.css
@@ -18,10 +18,22 @@ h2.customfont {
     font-size: 1.3vw;
 }
 
-p.customfont {
+h4.customfont {
+  font-family: "Aquire", Verdana, Tahoma;
+  color: white;
+  font-size: 1vw;
+}
+
+p.customfontwhite {
   font-family: "Aquire", Verdana, Tahoma;
   color: white;
   font-size: 0.6vw;
+}
+
+p.customfontblack {
+  font-family: "Aquire", Verdana, Tahoma;
+  color: black;
+  font-size: 0.75vw;
 }
 
 /* Grid Layout of the webpage */
@@ -70,10 +82,14 @@ p.customfont {
 
 .Current-Data-Area {
     grid-area: Current-Data-Area;
+    align-content: center;
+    text-align: center;
 }
 
 .Flight-Card-Area {
     grid-area: Flight-Card-Area;
+    align-content: center;
+    text-align: center;
 }
 
 .Live-Viewer-Area {
@@ -159,6 +175,7 @@ body,
 
   background-color: #555;
   border-radius: 5%;
+  overflow: scroll;
 }
 
 
@@ -190,27 +207,28 @@ body,
 
 
 .flight-card{
+  height: 15vh;
+  max-width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+
+  /* padding: 20px; */
+  display: grid;
+  grid-template-columns: repeat(3, 33.33%); /* 3 columns */
+  grid-template-rows: repeat(3, 30%); /* 2 rows */
+  /* gap: 0%; */
+  text-align: center;
+  background-color: #555;
+  border-radius: 5%;
+  overflow: scroll;
+}
+
+.flight-card-text{
   height: 100%;
   max-width: 100%;
   margin-left: auto;
   margin-right: auto;
-  /* padding: 20px; */
-  display: grid;
-  grid-template-columns: repeat(3, 1fr); /* 3 columns */
-  grid-template-rows: repeat(2, auto); /* 2 rows */
-  gap: 10px; /* Optional: Add some space between the grid items */
-  text-align: center;
-  background-color: #555;
-  border-radius: 5%;
-}
-
-.flight-card-text{
-  height: 50%;
-  max-width: 100%;
-  margin-left: auto;
-  margin-right: auto;
   font-size: small;
-  margin: 1;
 }
 
 /* Timeline Styling */
